objects/Entity_Sales_Renewal_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Annual_List_Price__c</fullName>
        <label>Annual List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chargent_Gateway_Id__c</fullName>
        <label>Chargent Gateway Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combine_Sales_if_within_3_months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combine Sales if within 3 month?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_RA__c</fullName>
        <label>Date (RA)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_State__c</fullName>
        <label>Date (State)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Type_RA__c</fullName>
        <label>Date Type (RA)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Add in Fiscal Year</fullName>
                </value>
                <value>
                    <fullName>Last day of Org Date Month</fullName>
                </value>
                <value>
                    <fullName>Add a Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Type_State__c</fullName>
        <label>Date Type (State)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Add in Fiscal Year</fullName>
                </value>
                <value>
                    <fullName>Last day of Org Date Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_State__c</fullName>
        <label>Organizational State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Entry_Name_RA__c</fullName>
        <label>Pricebook Entry Name (RA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Entry_Name_State__c</fullName>
        <label>Pricebook Entry Name (State)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Fee_Price__c</fullName>
        <label>RA Fee Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Campaign_Name_RA__c</fullName>
        <label>Sale Campaign Name (RA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Campaign_Name_State__c</fullName>
        <label>Sale Campaign Name (State)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Entity Sales Renewal Settings</label>
    <pluralLabel>Entity Sales Renewal Settings</pluralLabel>
</CustomObject>